Fix cookie button mobile hover state

--- a/layout/layout/layout-app/layout-app.module.scss
+++ b/layout/layout/layout-app/layout-app.module.scss
@@ -100,6 +100,10 @@
       &.-mobile {
         height: 40px;
         @include font-size(16px, 24px);
+
+        &:hover {
+          background-color: $colour-flame;
+        }
       }
     }
 
@@ -126,6 +130,11 @@
       &.-mobile {
         height: 40px;
         @include font-size(16px, 24px);
+
+        &:hover {
+          background-color: unset;
+          color: white;
+        }
       }
     }
 
